--- a/frontend/index.html
+++ b/frontend/index.html
@@ -39,7 +39,7 @@
               <tbody>
                 <tr>
                   <td><img src="images/logos/linkedin.jpg" class="w-4"/></td>
-                  <td><a href="https://linkedin/georgejmx/"
+                  <td><a href="https://linkedin/in/georgejmx/"
                     class="font-mono text-yellow-200 hover:text-yellow-500">LinkedIn</a></td>
                 </tr>
                 <tr>
@@ -86,11 +86,36 @@
         </div>
         <!-- Projects Box -->
         <div id='projects-box' style="display:none">
-          <p class="text-white">This is where my project cards will go..</p>
+          <div class="flex flex-col max-w-sm border-1 overflow-hidden border-yellow-500 bg-black
+            p-2 mb-6">
+            <img src="images/projects/whisperblog.png" class="max-h-70 p-2" />
+            <div class="font-bold text-xl mb-2 font-mono text-yellow-500">WhisperBlog</div>
+            <a class="font-mono text-cyan-200 hover:text-cyan-300 mb-2 italic" 
+            href="https://whisperblog.xyz/">www.whisperblog.xyz</a>
+            <p class="font-mono text-white text-sm py-2">My take on what social media should
+              be like</p>
+          </div>
+          <div class="flex flex-col max-w-sm border-1 overflow-hidden border-yellow-500 bg-black
+            p-2 mb-6">
+            <img src="images/projects/wcne.png" class="max-h-70 p-2" />
+            <div class="font-bold text-xl mb-2 font-mono text-yellow-500">WindowCleanNE</div>
+            <a class="font-mono text-cyan-200 hover:text-cyan-300 mb-2 italic" 
+            href="https://whisperblog.xyz/">windowcleannortheast.co.uk</a>
+            <p class="font-mono text-white text-sm py-2">Client website made during lockdown</p>
+          </div>
+          <div class="flex flex-col max-w-sm border-1 overflow-hidden border-yellow-500 bg-black
+            p-2 mb-6">
+            <img src="images/projects/flowpass.png" class="max-h-70 p-2" />
+            <div class="font-bold text-xl mb-2 font-mono text-yellow-500">FlowPass</div>
+            <a class="font-mono text-cyan-200 hover:text-cyan-300 mb-2 italic" 
+            href="https://github.com/georgejmx/FlowPass"><i>find me on github</i></a>
+            <p class="font-mono text-white text-sm py-2">Custom android password manager for
+              personal use</p>
+          </div>
+          <!-- Blog Box -->
         </div>
-        <!-- Blog Box -->
         <div id='blog-box' style="display:none">
-          <p class="text-white">This is where the blog goes -_-</p>
+          <p class="text-white">This is where my blog cards will go..</p>
         </div>
       </div>
     </main>
