improved profile image and fixed blog reference

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -27,20 +27,20 @@
           </button>
           <button
             class="text-orange-600 bg-black font-bold font-mono py-2 px-4 mb-1 border rounded border-b-4 border-orange-600 hover:bg-[#360202]"
-            id="blog-btn"
+            id="story-btn"
           >
-            Blog
+            Stories
           </button>
         </div>
         <!-- Home Box -->
         <div id="home-box" style="display: initial">
           <div>
             <p class="text-slate-300 font-mono bg-black md:text-sm">
-              Junior developer lost in fractal space; currently pursuing my
-              passion for web development after graduating. Motivated about the
-              potential of technology to drive change, and also the chance to be
-              creative in and out of work. Away from fractalspace I enjoy
-              travelling, reading and picking up a Uke.
+              Developer lost in fractal space; currently pursuing my passion for
+              web development after graduating. Motivated about the potential of
+              technology to drive change, and also the chance to be creative in
+              and out of work. Away from fractalspace I enjoy travelling,
+              hiking, reading and picking up a Uke.
             </p>
           </div>
           <div
@@ -182,7 +182,7 @@
           </p>
         </div>
         <!-- Blog Box -->
-        <div id="blog-box" style="display: none">
+        <div id="story-box" style="display: none">
           <div
             class="flex flex-col max-w-sm border-1 overflow-hidden border-orange-600 bg-black p-2 mx-4 mb-6"
           >
