expandable button fully working

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -182,52 +182,19 @@
           </p>
         </div>
         <!-- Blog Box -->
-        <div id="story-box" style="display: none">
-          <div
-            class="flex flex-col max-w-sm border-1 overflow-hidden border-orange-600 bg-black p-2 mx-4 mb-6"
-          >
-            <div
-              class="flex border-1 border-black border-b-orange-600 justify-around"
-            >
-              <div class="font-bold text-l mb-2 font-mono text-orange-600">
-                Ultimate Decentralisation
-              </div>
-              <p class="font-bold text-l mb-2 font-mono text-yellow-500">
-                5/6/22
-              </p>
-            </div>
-            <p class="font-mono text-white text-xs py-2">
-              The dominance of cloud providers is intrinsically linked to
-              centralisation of the internet, which facilitates easier
-              censorship, financial monopolisation of servers, data privacy
-              concerns: the list goes on. Decentralisation of digital society
-              can only happen if big cloud players are either made redundant, or
-              embrace change. So why this situation in the first place? HTTP is
-              an amazing invention that is great for ease of use for developers,
-              scalability and somewhat openness. It also facilitated the rise of
-              big cloud. URLs are a mapping between client resources e.g. HTML
-              file and the web server that serves the file. This largely 1-1
-              mapping lends to reliance on big cloud, as there is a central
-              source of web server compute ability. IPFS, an alternate protocol,
-              breaks this link by using Uniform Resource Hashes instead, meaning
-              a greater pool of servers can cache the same resource, where each
-              IPFS node (the equivalent to a HTTP web server) is part of a
-              decentralised network. Each IPFS node caches all URHs they wish to
-              host, and also caches other URHs that are served on the node. As
-              requesting a resource is not tied to a particular server, any node
-              that has an outage, is censored or is even too far away to serve a
-              resource quick enough, is not a point of failure. Decentralisation
-              from the ground up in this way would remove the problematic
-              monopolisation of the internet.
-            </p>
-          </div>
-        </div>
+        <div id="story-box" style="display: none"></div>
       </div>
     </main>
   </body>
 </html>
 
-<!-- Frontend styles generates by JavaScript that WindiCSS needs
+<!-- Frontend styles generates by JavaScript that WindiCSS needs; as it cant read server templates like tailwind can
+<h1>Fascinations</h1>
 <div
   class="fill-orange-600 fill-yellow-500 fill-orange-400 text-orange-600 text-yellow-500 text-orange-400 w-18 w-19 w-20 w-21 w-22 w-23 w-24 w-25 w-26 w-27 w-28 w-29 w-30 h-4 ml-2"
-></div> -->
+></div> 
+<h1>Stories</h1>
+<div
+  class="flex flex-col max-w-sm border-1 overflow-hidden border-orange-600 bg-black p-2 mx-4 mb-6 border-1 border-black border-b-orange-600 justify-around font-bold text-l mb-2 font-mono text-orange-600 text-yellow-500 font-mono text-white text-xs py-2 text-green-500 bg-black font-bold font-mono py-2 px-4 mb-1 border rounded border-b-4 border-green-500 hover:bg-[#360202]"
+><div>
+-->
