stories page fully working

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -197,4 +197,8 @@
 <div
   class="flex flex-col max-w-sm border-1 overflow-hidden border-orange-600 bg-black p-2 mx-4 mb-6 border-1 border-black border-b-orange-600 justify-around font-bold text-l mb-2 font-mono text-orange-600 text-yellow-500 font-mono text-white text-xs py-2 text-green-500 bg-black font-bold font-mono py-2 px-4 mb-1 border rounded border-b-4 border-green-500 hover:bg-[#360202]"
 ><div>
+<h1>Story</h1>
+<div
+  class="mb-6 text-2xl w-3/4 bg-black text-xs font-bold font-mono py-2 px-4 mb-1 border rounded border-b-4 border-green-500 hover:bg-[#360202] font-light italic text-xs mr-2"
+></div>
 -->
